tests/cases/ffi/errors/extern-varargs-aggregate.ari
extern "C" fn printf(format: ptr c_char, ...) -> c_int;

fn main() -> i64 {
  let pair = (1, 2);
  printf("%lld", pair);
  return 0;
}
